<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/credential_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/project_description"
        android:layout_above="@+id/credential_number_buttons"
        android:isScrollContainer="false"
        android:scrollbarFadeDuration="0">
        <LinearLayout
            android:id="@+id/credential_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/project_description"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:gravity="left"
        android:hint="Please Enter Project Description"
        android:imeOptions="actionDone"
        android:layout_below="@+id/project_name"
        android:inputType="text|textMultiLine|textCapSentences"
        android:maxLength="21"
        android:maxLines="3" />

    <EditText
        android:id="@+id/project_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_project_name_prompt"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:maxLength="25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/credential_number_buttons"
        android:layout_above="@+id/buttons_create_and_cancel"
        android:orientation="horizontal">
        <Button
            android:id="@+id/increase_credential_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="Increase Number of Skills" />

        <Button
            android:id="@+id/decrease_credential_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Decrease Number of Skills" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/view_created_projects"
        android:id="@+id/buttons_create_and_cancel"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_project_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/create_project" />

        <Button
            android:id="@+id/cancel_project_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cancel" />
    </LinearLayout>

    <Button
        android:id="@+id/view_created_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="viewCreatedProjects"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/view_all_project" />


</RelativeLayout>